fixed card misalignment issue.

--- a/public/nprogress.scss
+++ b/public/nprogress.scss
@@ -98,7 +98,7 @@
 
 .generated-card {
   transform: scale(0.375);
-  margin-top: -125px;
+  transform-origin: top left;
   width: 100px
 }
 
